--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,21 @@ beautifulsoup4 = "*"
 requests = "*"
 python-telegram-bot = "*"
 html5lib = "*"
+pylama = "*"
+pylint = "*"
+mypy = "*"
+coverage = "*"
 
 [dev-packages]
+types-requests = "*"
 
 [requires]
 python_version = "3.8"
+
+[scripts]
+lint = "pylama"
+test = "python -m unittest discover"
+test-cov = "coverage run -m unittest discover"
+report = "coverage"
+report-html = "coverage html"
+report-xml = "coverage xml"
